# tracker_eval

./: .gitignore  README.md  pyproject.toml  tree_structure.sh  viz_example.txt
tracker_eval/: utils.py
tracker_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tracker_eval/.ipynb_checkpoints/: utils-checkpoint.py
tracker_eval/cli/: build_score_distributions_from_gt_det.py  convert_gt_to_kitti_3d.py  generate_pseudo_detections_from_gt.py  pseudo_det_spec.json  pseudo_det_spec_v1.yaml  pseudo_det_spec_v2.yaml  run_all_trackers.py  run_tracker.py  run_tracker_cli_commands.txt  viz_tracks.py  viz_tracks_fps_3d.py
tracker_eval/cli/.ipynb_checkpoints/: run_tracker_cli_commands-checkpoint.txt
tracker_eval/common/: odometry_transform.py  types.py
tracker_eval/data/: jrdb_io.py  tracks_io.py
tracker_eval/export/: jrdb_kitti_writer.py
tracker_eval/runner/: run_sequence.py  run_split.py
tracker_eval/trackers/: ab3dmot_adapter.py  base.py  cbmot_adapter.py  elptnet_adapter.py  fastpoly_adapter.py  gnnpmbtracker_adapter.py  headroom_adapter.py  headroom_kf_adapter.py  simpletrack_adapter.py
